--- a/src/component/Button.css
+++ b/src/component/Button.css
@@ -1,6 +1,6 @@
 .component-button {
   display: inline-flex;
-  width: 25%;
+  width: 20%;
   flex: 1 0 auto;
 }
 
@@ -9,9 +9,9 @@
 }
 
 .component-button button {
-  background-color: #e0e0e0;
+  background-color: #ffffff;
   border: 0;
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin: 0 1px 0 0;
   flex: 1 0 auto;
   padding: 0;
@@ -22,6 +22,6 @@
 }
 
 .component-button.orange button {
-  background-color: #f5923e;
-  color: white;
+  background-color: #6d466b;
+  color: #ead7d7;
 }
