--- a/src/component/ButtonPanel.css
+++ b/src/component/ButtonPanel.css
@@ -1,5 +1,5 @@
 .component-button-panel {
-  background-color: #858694;
+  background-color: #ead7d7;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
